tests/expectations/compiler/function/inline_17_inputs_17_outputs.out
Error [ETYC0372168]: The fn `baz` has 17 input parameters, which exceeds the allowed limit of 16.
    --> compiler-test:2:4
     |
   2 | fn baz(
     |    ^^^
     |
     = Consider reducing the number of input parameters. You might combine some parameters into a struct or refactor the {variant} to simplify its signature.
